<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OpenERP</string>
    <string name="title_activity_main">OpenERP</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!-- Account Fragment Strings -->
    <string name="logo_description">OpenERP</string>
    <string name="account_title">Setup Your OpenERP Server</string>
    <string name="account_description">Provide your OpenERP 7.0 Server URL and click on Continue button to test Connection and go next step.</string>
    <string name="account_edit_server_url">Server URL</string>
    <string name="account_edit_server_port">Port Number (If any)</string>
    <string name="account_continue_button">Continue</string>
    <string name="account_login_button">Login</string>

    <!-- Login Fragment Strings -->
    <string name="login_title">Config Your OpenERP Login Details</string>
    <string name="login_description">Select your working database and provide your username and password to access.</string>
    <string name="login_select_database">Select Database</string>
    <string name="login_edit_username">Username</string>
    <string name="login_edit_password">Password</string>
    <string name="action_settings">Settings</string>

    <!-- SyncWizard fragment strings -->
    <string name="syncwizard_title">Enable/Disable your Sync Settings</string>
    <string name="syncwizard_description">Select your auto sync option so application will get up to-date automatically.</string>
    <string name="account_sync_wizard_button">Continue</string>

    <!-- Message Fragment -->
    <string name="message_inbox_all_read"><b>Good Job!</b> Your inbox is empty.\n \n

Your inbox contains private messages or emails sent to you as well as information related to documents or people you follow.</string>
    <string name="message_tome_all_read"><b>No private message.</b>\n\nThis list contains messages sent to you.</string>
    <string name="message_todo_all_read"><b>No todo.</b>\n\n

When you process messages in your inbox, you can mark some as todo. From this menu, you can process all your todo.</string>
    <string name="message_no_group_message">No message in this group.</string>
    <string name="message_waiting_for_sync_to_start">Waiting for Sync to Start</string>
    <string name="message_your_message_will_appear_shortly">Your messages will appear shortly</string>

    <!-- Compose Note Fragment Strings -->
    <string name="compose_note_tags">Tags</string>
    <string name="compose_note_stages">Stages</string>
    <string name="compose_note_description">Note</string>
    <string name="imgview_note_add_tags">This will open the dailogbox to select tags</string>

    <!-- Detail Note Fragment Strings -->
    <string name="detail_note_name">Note Name</string>
    <string name="detail_note_memo">Note Memo</string>

    <!-- Setting pref strings -->
    <string-array name="syncInterval">
        <item name="5">Every 5 minutes</item>
        <item name="10">Every 10 minutes</item>
        <item name="20">Every 20 minutes</item>
        <item name="40">Every 40 minutes</item>
        <item name="60">Every 60 minutes</item>
        <item name="1440">Once in a day</item>
    </string-array>
    <string-array name="syncIntervalValues">
        <item name="5">5</item>
        <item name="10">10</item>
        <item name="20">20</item>
        <item name="40">40</item>
        <item name="60">60</item>
        <item name="1440">1440</item>
    </string-array>
    <string-array name="syncDataLimit">
        <item name="30">1 month old</item>
        <item name="60">2 months old</item>
        <item name="90">3 months old</item>
    </string-array>
    <string-array name="syncDataLimitValues">
        <item name="30">30</item>
        <item name="60">60</item>
        <item name="90">90</item>
    </string-array>

    <!-- Aboout Company Fragment Strings -->
    <string name="about_Company_line1">Copyright © 2004-TODAY OpenERP SA. All Rights Reserved.</string>
    <string name="about_Company_line2">OpenERP is a trademark of the <a href="https://www.openerp.com/">OpenERP.com.</a></string>
    <string name="about_Company_line3">Licenced under the terms of <a href="http://www.gnu.org/licenses/agpl.html/">GNU Affero General Public License</a></string>
    <string name="about_Company_line4">For more information visit <a href="https://www.openerp.com/">OpenERP.com</a>.</string>
    <string name="app_version_name">Version</string>
    <string name="imgcontentDescription">OpenERP LOGO in upper portion of the screen</string>

    <!-- OpenERP Widget Strings -->
    <string name="widget_company_logo">OpenERP logo</string>
    <string name="widget_notes_label">Notes</string>
    <string name="widget_notes_notification">00</string>
    <string name="widget_messages_label">Messages</string>
    <string name="widget_messages_notification">00</string>
    <string name="widget_compose_notes">OpenComposeNotes</string>
    <string name="widget_compose_messages">OpenComposeMessages</string>
    <string name="untrusted_ssl_warning">The site\'s security certificate is not trusted !</string>

</resources>