<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:paddingTop="?android:attr/actionBarSize" >

    <RelativeLayout
        android:id="@+id/mainContent"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal" >

        <RelativeLayout
            android:id="@+id/logoLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:padding="20dp" >

            <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/logo_description"
                android:src="@drawable/openerp_logo" />
        </RelativeLayout>

        <TextView
            android:id="@+id/txvTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logoLayout"
            android:fontFamily="sans-sarif-condensed"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/login_title"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/txvsubTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txvTitle"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:text="@string/login_description"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#414141" />

        <RelativeLayout
            android:id="@+id/layoutLoginConfig"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txvsubTitle"
            android:padding="20dp" >

            <Spinner
                android:id="@+id/lstDatabases"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:prompt="@string/login_select_database" />

            <EditText
                android:id="@+id/edtUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lstDatabases"
                android:layout_marginBottom="20dp"
                android:fontFamily="sans-serif-light"
                android:hint="@string/login_edit_username"
                android:inputType="textUri"
                android:singleLine="true" />

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edtUsername"
                android:layout_marginBottom="20dp"
                android:fontFamily="sans-serif-light"
                android:hint="@string/login_edit_password"
                android:inputType="textPassword"
                android:singleLine="true" />
        </RelativeLayout>
    </RelativeLayout>

</ScrollView>