<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:id="@+id/mainContent"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal" >

        <RelativeLayout
            android:id="@+id/logoLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:padding="20dp" >

            <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/logo_description"
                android:src="@drawable/openerp_logo" />
        </RelativeLayout>

        <TextView
            android:id="@+id/txvTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logoLayout"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/account_title"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/txvsubTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txvTitle"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:text="@string/account_description"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#414141" />

        <RelativeLayout
            android:id="@+id/layoutServerConfig"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txvsubTitle"
            android:padding="20dp" >

            <EditText
                android:id="@+id/edtServerURL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:hint="@string/account_edit_server_url"
                android:inputType="textUri"
                android:singleLine="true" />

            <EditText
                android:id="@+id/edtServerPort"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edtServerURL"
                android:layout_marginBottom="20dp"
                android:hint="@string/account_edit_server_port"
                android:inputType="number"
                android:singleLine="true" />
        </RelativeLayout>
    </RelativeLayout>

</ScrollView>