<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="true"
    android:fillViewport="true"
    android:paddingTop="?android:attr/actionBarSize" >

    <RelativeLayout
        android:id="@+id/layoutToMove"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff" >

        <RelativeLayout
            android:id="@+id/logoLayout"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:background="#FFFFFF"
            android:gravity="center_horizontal"
            android:padding="20dp" >

            <ImageView
                android:id="@+id/abtus_imgLogo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginTop="15dp"
                android:contentDescription="@string/imgcontentDescription"
                android:src="@drawable/openerp_logo" />

            <TextView
                android:id="@+id/txvVersionName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/abtus_imgLogo"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="25dp"
                android:text="@string/app_version_name"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layoutServerConfig"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_below="@id/logoLayout"
            android:background="@drawable/aboutus_background"
            android:padding="20dp" >

            <TextView
                android:id="@+id/line1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="left"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/about_Company_line1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/line2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/line1"
                android:fontFamily="sans-serif-light"
                android:gravity="left"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/about_Company_line2"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/line3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/line2"
                android:fontFamily="sans-serif-light"
                android:gravity="left"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/about_Company_line3"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/line4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/line3"
                android:fontFamily="sans-serif-light"
                android:gravity="left"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/about_Company_line4"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white" />
        </RelativeLayout>
    </RelativeLayout>

</ScrollView>