<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3" >

            <TextView
                android:id="@+id/txv_editNote_Tag_Heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/compose_note_tags"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <com.openerp.util.tags.TagsView
                android:id="@+id/txv_editNote_Tag"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:layout_weight="3"
                android:padding="3dp" />

            <ImageView
                android:id="@+id/imgBtnEditTags"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/oe_listview_background_selector"
                android:contentDescription="@string/imgview_note_add_tags"
                android:padding="5dp"
                android:src="@drawable/ic_action_content_new" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3" >

            <TextView
                android:id="@+id/txv_editNote_StageHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/compose_note_stages"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/spinner_editNote_Stage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:id="@+id/txv_editNote_Description_Heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/compose_note_description"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/txv_editNote_Description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/compose_note_description"
            android:paddingTop="10dp" />

        <WebView
            android:id="@+id/txv_editNote_Description_Pad"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible" />
    </LinearLayout>

</ScrollView>