<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:paddingTop="?android:attr/actionBarSize" >

    <RelativeLayout
        android:id="@+id/mainContent"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal" >

        <RelativeLayout
            android:id="@+id/logoLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:padding="20dp" >

            <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/logo_description"
                android:src="@drawable/openerp_logo" />
        </RelativeLayout>

        <TextView
            android:id="@+id/txvTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logoLayout"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/syncwizard_title"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/txvsubTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txvTitle"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:text="@string/syncwizard_description"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#414141" />

        <LinearLayout
            android:id="@+id/layoutLoginConfig"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txvsubTitle"
            android:orientation="vertical"
            android:padding="20dp" >
        </LinearLayout>
    </RelativeLayout>

</ScrollView>